--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master’s in Artificial
                       Intelligence & Computer Science</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>email@example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>psj.pratham@gmail.com</span></li>
                 </ul>
               </div>
             </div>
